# project_YEDA

./: .gitignore  README.md  config.browserstack.env  config.emulation.env  config.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
diploma_project_tests/: command.py
diploma_project_tests/controls/: attach.py  datepicker.py  utils.py
diploma_project_tests/data/: data.py
diploma_project_tests/helpers/: app.py
diploma_project_tests/model/: accept_cookie.py  authorization.py  authorization_booking.py  verify_booking.py
diploma_project_tests/pages/: article_page.py  articles_booking_page.py  attractions_page.py  bundle_page.py  course_page.py  destination_page.py  favorite_list_page.py  lesson_page.py  questionnaire_page.py  registration_user_page.py  rental_car_page.py  survey_page.py  taxi_page.py  teacher_page.py  user_page.py
diploma_project_tests/pages/mobile/: articles_booking_page.py  attractions_page.py  destination_page.py  favorite_list_page.py  registration_user_page.py  rental_car_page.py  taxi_page.py
diploma_project_tests/pages/web/: article_page.py  bundle_page.py  course_page.py  lesson_page.py  questionnaire_page.py  survey_page.py  teacher_page.py  user_page.py
diploma_project_tests/utils/: requests_helper.py  sessions.py
notifications/: telegram_slack_config.json
resources/: schedule.xlsx  schedule_example.xlsx  template-courses.xlsx
schemas/: yeda.py
tests/: conftest.py
tests/api/: test_add_message_to_forum.py  test_authorization.py  test_display_all_bundles.py  test_display_all_courses.py  test_display_all_teachers.py  test_display_information_bundle.py  test_display_information_course.py  test_edit_profile.py  test_information_one_teacher.py  test_register_to_the_course.py
tests/mobile/: test_add_create_list.py  test_add_house_to_favorites_list.py  test_authorization.py  test_deleting_houses_from_the_favorites_list.py  test_registration_user.py  test_search_attractions.py  test_search_destination.py  test_search_rental_car.py  test_search_taxi.py  test_search_travel_articles.py
tests/ui/: test_create_article.py  test_create_bundles.py  test_create_courses.py  test_create_lesson.py  test_create_questionnaire.py  test_create_survey.py  test_create_teacher.py  test_create_user.py  test_filling_the_bundle_with_information.py  test_filling_the_course_with_information.py  test_filling_the_questionnaire_with_information.py  test_lesson.py  test_questionnaire.py  test_survey.py
yeda_admin_panel_tests/: command.py
yeda_admin_panel_tests/controls/: attach.py  utils.py
yeda_admin_panel_tests/data/: data.py
yeda_admin_panel_tests/helpers/: app.py
yeda_admin_panel_tests/pages/: article_page.py  authorization_old_admin_panel.py  authorization_website.py  bundle_page.py  course_page.py  lesson_page.py  questionnaire_page.py  teacher_page.py  user_page.py
yeda_admin_panel_tests/utils/: attachment.py  requests_helper.py  sessions.py
